--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "next": "~14.0.4",
     "vercel": "~32.4.1"
   },
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "dependencies": {
+    "@chainlink/contracts": "^1.0.0"
+  }
 }
