implement widget & alerts

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "packageManager": "yarn@3.2.3",
   "dependencies": {
-    "@chainlink/contracts": "^1.0.0"
+    "@chainlink/contracts": "^1.0.0",
+    "react-hook-form": "^7.51.2"
   }
 }
