--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -14,6 +14,7 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@curvegrid/multibaas-sdk": "^1.0.0-beta18",
     "@ethersproject/providers": "~5.7.2",
     "@heroicons/react": "~2.0.11",
     "@lighthouse-web3/sdk": "^0.3.0",
