--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "packageManager": "yarn@3.2.3",
   "dependencies": {
     "@chainlink/contracts": "^1.0.0",
+    "embla-carousel-auto-scroll": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "react-hook-form": "^7.51.2",
     "use-sound": "^4.0.1"
   }
