--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -22,12 +22,14 @@
     "@uniswap/sdk-core": "~4.0.1",
     "@uniswap/v2-sdk": "~3.0.1",
     "blo": "~1.0.1",
+    "copy-to-clipboard": "^3.3.3",
     "daisyui": "4.5.0",
     "next": "~14.0.4",
     "next-themes": "~0.2.1",
     "nprogress": "~0.2.0",
     "qrcode.react": "~3.1.0",
     "react": "~18.2.0",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "~5.1.0",
     "react-dom": "~18.2.0",
     "react-hot-toast": "~2.4.0",
@@ -42,6 +44,7 @@
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0",
     "@types/react": "^18.0.21",
+    "@types/react-color": "^3.0.12",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "~5.40.0",
     "autoprefixer": "~10.4.12",
